--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,116 @@
-.wrapper{
-    margin: auto;
-    width: 90vw;
-    min-height: 100vh;
-    background-color: rgb(2, 139, 84);
+body{
+    background-image:url("../source/fondito.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+body h1{
+    color: rgb(255, 255, 255);
     text-align: center;
-    color: blue;
+    font-size: 45px;
+    padding: 15px 700px 15px 700px;
 }
 
-.titulo{
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    color:blue
-}
+    background-color:#353535;
+    margin: 30px 200px 0 200px;
+    border:solid 25px #000;
+  }
 
-.card{
-    width: 30%;
-    display: inline-block;
-
-}
-
-.card-image{
-  width: 100%;
-  margin-top: 25px;
   
-}
+  .menu-item {
+    width: 33.33%;
+    padding: 10px;
+    box-sizing: border-box; 
+    
+  }
+
+  .menu-item img {
+    height: 350px;
+    width: 250px;
+    background-color: #000000;
+    padding: 15px 15px 15px 15px;  
+    border-radius: 4px; 
+  }
+
+  .menu-item p {
+    margin-top: 5px;
+    font-size: 25px;
+    color:rgb(255, 255, 255);
+    text-decoration: none;
+  }
+
+  .menu-item img:hover {
+    background-color: #141414;
+    color:#ffffff 
+  }
+
+  .menu-item a{
+      text-decoration: none;
+  }
+
+  .menu2 {
+    width: 50%;
+    display: flex;
+    justify-content: center; 
+    background-color: #000;
+    margin: 10px 0;
+  }
+  
+  .menu2 ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+  }
+  
+  .menu2 li {
+    margin-right: 10px;
+  }
+  
+  .menu2 li a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: #000;
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+  }
+  
+  .menu2 li a:hover {
+    background-color: #353535;
+    color:#FFFFFF
+  }
+
+  .container {
+    text-align: center;
+    margin:25px 0 0 50px;
+  }
+  
+  img {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .button {
+    display: inline-block;
+    margin: 5px;
+    padding: 6px 6px;
+    background-color: #000000;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+
+  .button:hover{
+    background-color: #353535;
+    border: #000;
+      }
 
